Fix search box gap

--- a/src/app/layout/search/search.component.scss
+++ b/src/app/layout/search/search.component.scss
@@ -35,8 +35,8 @@
     width: auto;
     box-sizing: border-box;
     border-radius: 4px 0 0 4px;
-
     padding: 0 12px;
+    margin: 0;
     > div {
       padding: 0 8px;
       width: auto;
@@ -47,6 +47,8 @@
     flex-grow: 1;
     max-width: 214px;
     input {
+      border-width: 1px;
+      border-style: solid;
       width: 100%;
     }
   }
